# tendedloop-arena

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
academic/: README.md  behavioral-ai.md  classroom-guide.md  course-a-multi-agent-systems.md  course-b-gamification-design.md  instructor-guide.md  strategic-ai.md
academic/lectures/: README.md
academic/lectures/behavioral-ai/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md  week-13.md  week-14.md
academic/lectures/strategic-ai/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md  week-09.md  week-10.md  week-11.md  week-12.md  week-13.md  week-14.md
blog/: 01-the-problem-nobody-tells-you.md  02-first-agent-in-15-lines.md  03-why-your-agent-oscillates.md  04-explore-exploit-dilemma.md  05-how-poker-ai-beat-6-pros.md  06-thompson-sampling-learns-by-guessing.md  07-let-gpt-run-your-experiment.md  08-five-ways-to-break-production.md  09-duolingo-mathematical-autopsy.md  10-build-an-agent-that-wins.md  README.md
course/: 00-roles-and-setup.md  01-what-is-arena.md  02-the-arena-environment.md  03-your-first-agent.md  04-feedback-loops.md  05-multi-objective.md  06-explore-exploit.md  07-ucb1.md  08-thompson-sampling.md  09-contextual-bandits.md  10-bayesian-optimization.md  11-reinforcement-learning.md  12-llm-agents.md  13-ensemble-methods.md  14-production-safety.md  README.md
docs/: architecture.md  classroom-guide.md  error-codes.md  faq.md  guardrails.md  instructor-guide.md  metrics.md  strategies.md
examples/: 00_demo_sandbox.py  01_quickstart.py  02_gymnasium_rl.py  03_multi_metric.py  04_llm_agent.py  05_thompson_sampling.py  06_pid_controller.py  07_ucb1.py  08_contextual_bandit.py  09_bayesian_optimization.py  10_ensemble.py  11_explore_then_exploit.py  12_production_safety.py
tendedloop_agent/: __init__.py  __main__.py  agent.py  demo.py  env.py  types.py
tests/: conftest.py  test_agent.py  test_env.py  test_types.py
workshop/: 00-roles-and-setup.md  01-what-is-arena.md  02-the-arena-environment.md  03-your-first-agent.md  04-feedback-loops.md  05-multi-objective.md  06-explore-exploit.md  07-ucb1.md  08-thompson-sampling.md  09-contextual-bandits.md  10-bayesian-optimization.md  11-reinforcement-learning.md  12-llm-agents.md  13-ensemble-methods.md  14-production-safety.md  README.md
