[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tendedloop-arena"
version = "0.1.0"
description = "Python SDK for TendedLoop Arena — multi-agent gamification research platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Osher Yadgar", email = "osher@uzerz.com"},
    {name = "TendedLoop", email = "support@tendedloop.com"},
]
keywords = ["gamification", "multi-agent", "reinforcement-learning", "research", "arena"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.28.0",
    "numpy>=1.24.0",
]
llm = [
    "anthropic>=0.39.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
all = [
    "tendedloop-arena[rl,llm,dev]",
]

[project.urls]
Homepage = "https://tendedloop.com"
Documentation = "https://github.com/osheryadgar/tendedloop-arena/tree/main/docs"
Repository = "https://github.com/osheryadgar/tendedloop-arena"
Issues = "https://github.com/osheryadgar/tendedloop-arena/issues"

[tool.setuptools.packages.find]
include = ["tendedloop_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E501"]  # Examples prioritize readability over line length
